<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Add_button"
        android:layout_width="188dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:background="#9370DB"
        android:text="@string/add_a_new_cloth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ideas_button" />

    <Button
        android:id="@+id/Create_button"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:background="#9370DB"
        android:text="@string/button_create_a_combination"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_button" />

    <Button
        android:id="@+id/ideas_button"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:background="#9370DB"
        android:text="@string/button_give_me_ideas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/menu_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="TUCKED" />


</android.support.constraint.ConstraintLayout>